# flyEngine

./: .gitignore  README.md  fs.glsl  fs_albedo.glsl  fs_albedo_alpha.glsl  fs_albedo_alpha_parallax.glsl  fs_albedo_normal.glsl  fs_albedo_normal_alpha.glsl  fs_albedo_normal_alpha_parallax.glsl  fs_albedo_normal_alpha_shadows_pcf.glsl  fs_albedo_normal_parallax.glsl  fs_albedo_normal_parallax_shadows.glsl  fs_albedo_normal_shadows.glsl  fs_albedo_parallax.glsl  fs_albedo_shadows.glsl  fs_depth.glsl  fs_depth_alpha.glsl  fs_normal.glsl  fs_parallax.glsl  fs_shadows_pcf.glsl  vs.glsl  vs_depth.glsl  vs_depth_wind.glsl  vs_wind.glsl
assets/: Map__2_Noise.tga  leafs_lod1.mtl  pineforest03.dds  pineforest03_n.dds  plane.mtl  sphere.mtl  tree.mtl  tree_lod0.mtl  treeaspenbarkcomp2.dds  treeaspenbarkcomp2_n.dds  treepineforestbarkcomp.dds  treepineforestbarkcomp_n.dds
assets/Tree1/: Tree1.mtl
assets/dx11/: effect.fx  effects_terrain.fx
assets/opengl/: cs_culling.glsl  cs_lod.glsl  fs_DOF.glsl  fs_DOF_ref_depth.glsl  fs_aabb.glsl  fs_bloom.glsl  fs_brightness.glsl  fs_cloud_billboard.glsl  fs_composite.glsl  fs_create_normal_map.glsl  fs_debug_frustum.glsl  fs_deferred_geometry_terrain.glsl  fs_deferred_geometry_textured.glsl  fs_deferred_lighting_directional.glsl  fs_deferred_lighting_point.glsl  fs_deferred_lighting_spot.glsl  fs_depth.glsl  fs_depth_point_light.glsl  fs_dl.glsl  fs_edit_normals.glsl  fs_exposure.glsl  fs_forward_billboard.glsl  fs_forward_billboard_transparency.glsl  fs_geo_mip_map_editor_height.glsl  fs_god_ray.glsl  fs_gradient.glsl  fs_grass.glsl  fs_impostor.glsl  fs_leaf_impostor.glsl  fs_leaves.glsl  fs_leaves_depth.glsl  fs_lens_flare.glsl  fs_lens_flare_combine.glsl  fs_light_gather.glsl  fs_light_volume.glsl  fs_light_volume_point.glsl  fs_light_volume_spot.glsl  fs_motion_blur.glsl  fs_ping_pong_filter.glsl  fs_ping_pong_filter_bilateral.glsl  (+62 more)
assets/sponza/: sponza.mtl
assets/sponza/textures/: spnza_bricks_a_ddn.tga  sponza_fabric_blue_diff_n.tga  sponza_fabric_diff_n.tga  sponza_fabric_green_diff_n.tga  sponza_floor_a_diff_n.tga
common/: BaseQtScene.cpp  BaseQtScene.h
dx11_example/: CMakeLists.txt
dx11_example/source/: DX11App.cpp
engine/: CMakeLists.txt  flyEngineConfig.cmake.in
engine/include/: AABB.h  Animation.h  AnimationSystem.h  AssimpImporter.h  Billboard.h  CamSpeedSystem.h  Camera.h  CameraController.h  Component.h  Cube.h  CullResult.h  DynamicMeshRenderable.h  Engine.h  Entity.h  EntityManager.h  FixedStackPOD.h  FixedTimestepSystem.h  Flags.h  GameTimer.h  GeometryGenerator.h  GlobalShaderParams.h  GraphicsSettings.h  IImporter.h  IntersectionTests.h  KdTree.h  KdTreeOld.h  Leakcheck.h  LevelOfDetail.h  Light.h  Material.h  MaterialDesc.h  Mesh.h  Model.h  NoiseGen.h  Octree.h  PhysicsCameraController.h  PtrCache.h  PtrDiff.h  Quadtree.h  RenderList.h  (+21 more)
engine/include/dx11/: DX11States.h  DXUtils.h  Effects.h  RenderingSystemDX11.h  debug.h
engine/include/math/: FlyMath.h  FlyMatrix.h  FlyVector.h  Helpers.h  MatVecHelpers.h  MathHelpers.h  Meta.h
engine/include/opengl/: GLAppendBuffer.h  GLBuffer.h  GLByteBufferStack.h  GLFramebuffer.h  GLMaterialSetup.h  GLSLShaderGenerator.h  GLSampler.h  GLShaderInterface.h  GLShaderProgram.h  GLShaderSetup.h  GLShaderSource.h  GLTexture.h  GLVertexArray.h  GLVertexBuffer.h  GLWrappers.h  OpenGLAPI.h  OpenGLUtils.h  RenderingSystemOpenGL.h
engine/include/physics/: Bullet3PhysicsSystem.h  ParticleSystem.h  PhysicsSystem.h  RigidBody.h  Rigidbody.h
engine/include/renderer/: AbstractRenderer.h  MeshRenderables.h  ProjectionParams.h  RenderParams.h  Renderer.h
engine/source/: AABB.cpp  Animation.cpp  AnimationSystem.cpp  AssimpImporter.cpp  Billboard.cpp  Camera.cpp  CameraController.cpp  Component.cpp  Cube.cpp  DynamicMeshRenderable.cpp  Engine.cpp  Entity.cpp  EntityManager.cpp  FixedTimestepSystem.cpp  GameTimer.cpp  GeometryGenerator.cpp  GraphicsSettings.cpp  LevelOfDetail.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  NoiseGen.cpp  PhysicsCameraController.cpp  Renderables.cpp  RenderingSystem.cpp  SkydomeRenderable.cpp  Sphere.cpp  StaticInstancedMeshRenderable.cpp  StaticMeshRenderable.cpp  StaticModelRenderable.cpp  System.cpp  Terrain.cpp  TerrainNew.cpp  Timing.cpp  Transform.cpp
engine/source/dx11/: DX11States.cpp  Effects.cpp  RenderingSystemDX11.cpp
engine/source/math/: MathHelpers.cpp
engine/source/opengl/: GLAppendBuffer.cpp  GLBuffer.cpp  GLFramebuffer.cpp  GLMaterialSetup.cpp  GLSLShaderGenerator.cpp  GLSampler.cpp  GLShaderProgram.cpp  GLShaderSetup.cpp  GLShaderSource.cpp  GLTexture.cpp  GLVertexArray.cpp  GLWrappers.cpp  OpenGLAPI.cpp  OpenGLUtils.cpp  RenderingSystemOpenGL.cpp
engine/source/physics/: Bullet3PhysicsSystem.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  RigidBody.cpp
examples/dx11_example/: CMakeLists.txt
examples/dx11_example/include/: DX11App.h
examples/dx11_example/source/: DX11App.cpp  main.cpp
examples/opengl_example/: CMakeLists.txt
examples/opengl_example/include/: ClickableLabel.h  GLWidget.h
examples/opengl_example/source/: ClickableLabel.cpp  GLWidget.cpp  main.cpp
examples/qt_example/: CMakeLists.txt
examples/qt_example/include/: AntWrapper.h  GLWidget.h
examples/qt_example/source/: AntWrapper.cpp  GLWidget.cpp  main.cpp
examples/sfml_example/: CMakeLists.txt
examples/sfml_example/source/: main.cpp
marching_cubes_test/: CMakeLists.txt
marching_cubes_test/source/: MCWidget.cpp  MCWidget.h  main.cpp
opengl_example/: CMakeLists.txt
opengl_example/include/: GLWidget.h
opengl_example/source/: GLWidget.cpp
terrain_editor/: CMakeLists.txt
terrain_editor/source/: GLWidget.cpp  GLWidget.h  main.cpp
